--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,20 @@
-[workspace]
+[package]
+name = "ghprs"
+version = "0.1.0"
+edition = "2021"
 
-resolver = "2"
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "ghp"
+path = "src/main.rs"
 
-members = [
-    "ghprs-core",
-    "ghprs-client",
-    "ghprsd",
-]
-
+[dependencies]
+anyhow = "1.0.75"
+chrono = { version = "0.4.31", features = ["serde"] }
+clap = { version = "4.4.10", features = ["derive"] }
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
+tabled = "0.14.0"
+thiserror = "1.0.50"
+tokio = { version = "1.34.0", features = ["io-util", "process", "rt", "rt-multi-thread", "macros"] }
+toml = "0.8.8"
