--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/main.rs"
 anyhow = "1.0.75"
 chrono = { version = "0.4.31", features = ["serde"] }
 clap = { version = "4.4.10", features = ["derive"] }
+futures = "0.3.29"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 tabled = "0.14.0"
