--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ tabled = "0.14.0"
 thiserror = "1.0.50"
 tokio = { version = "1.34.0", features = ["io-util", "process", "rt", "rt-multi-thread", "macros"] }
 toml = "0.8.8"
+
+[profile.release]
+debug = true
