--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,9 @@ clap = { version = "4.4.10", features = ["derive"] }
 futures = "0.3.29"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
+smol = "2.0.0"
 tabled = "0.14.0"
 thiserror = "1.0.50"
-tokio = { version = "1.34.0", features = ["io-util", "process", "rt", "rt-multi-thread", "macros"] }
 toml = "0.8.8"
 
 [profile.release]
